# mcp-server-scanner

./: .gitignore  BappDescription.html  BappManifest.bmf  LICENSE  NOTICE  gradle.lockfile  settings.gradle
test-server/: README.md  pyproject.toml
test-server/src/mcp_test_server/: __main__.py  app.py  auth.py  cli.py  db.py  hidden_methods.py  oauth.py  oauth_discovery.py  registry.py  request_log.py
test-server/src/mcp_test_server/vulns/: eval_format.py  fetch_url.py  leaky_descriptions.py  leaky_prompt.py  leaky_resource.py  leaky_tool_output.py  list_allowed_directories_tool.py  ping_host.py  poisoned_icons_prompt.py  poisoned_icons_resource.py  poisoned_icons_tool.py  query_user.py  read_file.py  read_file_resource_encoded.py  read_file_resource_prefixmatch.py  read_file_resource_rooted.py  (+14 more)
test-server/tests/: _helpers.py  conftest.py  test_app_integration.py  test_auth.py  test_cli_help.py  test_db.py  test_hidden_methods.py  test_oauth_consent_page.py  test_oauth_discovery.py  test_registry.py  test_vulns_discovery.py  test_vulns_eval_format.py  test_vulns_fetch_url.py  test_vulns_list_allowed_directories_tool.py  test_vulns_ping_host.py  test_vulns_query_user.py  test_vulns_read_file.py  test_vulns_read_file_resource_encoded.py  test_vulns_read_file_resource_prefixmatch.py  test_vulns_read_file_resource_rooted.py  test_vulns_read_file_resource_safe.py  test_vulns_read_file_resource_symlink.py  test_vulns_read_file_tool.py  test_vulns_read_file_tool_encoded.py  test_vulns_read_file_tool_prefixmatch.py  test_vulns_read_file_tool_safe.py  test_vulns_user_info.py
(+434 files in other folders)
