[project]
name = "mcp-test-server"
version = "0.1.0"
description = "Intentionally vulnerable MCP server used as a test target for the Burp Suite MCP Server Scanner extension."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Peter Hendy" }]
dependencies = [
    "mcp>=1.2",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
]

[project.urls]
Author = "https://www.linkedin.com/in/peterhendy"

[project.scripts]
mcp-test-server = "mcp_test_server.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_test_server"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
